# YOLO_CAR_DETECTION

./: CMakeLists.txt  README.md  convert_yolov8n.py  dataset.txt  run.sh  run_rknn.sh
src/: main.cpp  main_rknn.cpp
